Added support to supervise/svc for sending SIGQUIT/USR1/USR2/WINCH.
(original patch by Wayne Marshall, based on patch by Scott Gifford)

Modified supervise to automatically put the forked service into its own
process group to facilitate sending signals to the group.

Added support to supervise/svc for sending signals to the group.

Added support to softlimit for reading limits from environment variables.

Modified supervise to run "start" once before executing "run" to allow
for single-shot initialization.

Modified supervise to stop trying to restart the service if it exits 100.
(semantics borrowed from qmail control files)

Added support to multilog for "accustamp" time stamps.
(derived from patch by Matthias Andree)

Added support to supervise for storing the status files in an alternate
directory specified by $SUPERVISEDIR.

Modified multilog to support specifying an alternate "safely written"
filename extension (useful for compressed logs).

Added extended state information to the supervise/status file and svstat.

Added support to supervise for a "notify" script, executed whenever a
subprocess is started or exits.  If present, it is passed the script
name, "start" or "exit", the PID, and the exit code.

Added support for piping to "log" within supervise.  This requires "log"
to be an executable file (instead of a directory as for svscan).

Modified supervise to overwrite status instead of creating a new file.
This allows the "supervise" subdirectory to be non-writeable.