@@ -1,0 +1,2 @@
+--- supervise runs stop on down
+in stop
