@@ -9,7 +9,8 @@ Added support to supervise/svc for sending signals to the group.
 Added support to softlimit for reading limits from environment variables.
 
 Modified supervise to run "start" once before executing "run" to allow
-for single-shot initialization.
+for single-shot initialization, and to run "stop" after "run" exits for
+the last time.
 
 Modified supervise to stop trying to restart the service if it exits 100.
 (semantics borrowed from qmail control files)
